- Demo application rewritten to use JDIC (embedded browser component). - Processes and components read from descriptors (using scriptable controller). - GUI tuned a little.
JDIC seems to be fine, although I have my doubts about the way it is implemented... I might consider switching to SWT in the end. We'll see how JDIC performs first.


git-svn-id: file:///home/dweiss/carrot2/migration/carrot2.svn/trunk@657 7ff1d41c-760d-0410-a7ff-a3a56f310b35